Fixed My Project Section Alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -454,7 +454,6 @@ table.card-table td {
     height: 100%;
     max-width: 100%;
     max-height: 100%;
-    display: block;
     scroll-snap-align: start;
 }
 
@@ -475,7 +474,7 @@ table.card-table td {
     text-align: right;
 }
 
-.project-card-technologies {
+.project-card-facts {
     height: 15%;
 }
 
@@ -498,7 +497,7 @@ table.card-table td {
 .project-about-header {
     font-weight: bold;
     margin-right: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     font-size: 25px;
 }
 
